youtube link added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         Technologies like IoT and Blockchain have grown in interest and have 
                         potential for transformation and innovation that they bring to various industries and aspects of life.
                     </p>
-                    <!-- <a href="#">See more..</a> -->
+                    <a href="#">See more..</a>
                 </div>
                 <div>
                     <img src="icons/ai-icon-new.png" alt="">
@@ -91,16 +91,16 @@
                         Flutter is open-source UI based software created by Google.
                         With flutter we can develop apps for multiple platfors with single code base.
                     </p>
-                    <!-- <a href="#">See more..</a> -->
+                    <a href="#">See more..</a>
                 </div>
-                <div>
+                <div >
                     <img src="icons/nft-icon-new.png" alt="">
                     <h2>Designing</h2>
                     <p>
                         During my liesure hours I explore my creativity by producing easy to use UI interfaces
                         and attractive logos. I am also part of my college's D-GATE Cell
                     </p>
-                    <!-- <a href="#">See more..</a> -->
+                    <a href="https://www.youtube.com/@yunary_cutz">See more..</a>
                 </div>
                 
             </div>
@@ -228,6 +228,10 @@
             form.reset()
             .catch(error => console.error('Error!', error.message))
         })
+
+        function redirect(){
+            window.location.href()
+        }
       </script>
 </body>
 </html>
